force-app/main/default/objects/Feedback__c/Feedback__c.object-meta.xml
<CustomObject>
    <label>Feedback</label>
    <pluralLabel>Feedback</pluralLabel>
    <sharingModel>Private</sharingModel>
    <nameField>
        <label>Feedback Number</label>
        <type>AutoNumber</type>
        <displayFormat>FEE-{0000}</displayFormat>
    </nameField>
</CustomObject>