force-app/main/default/objects/Feedback__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <label>Support Case</label>
    <type>Lookup</type>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Feedback</relationshipLabel>
    <relationshipName>Feedback</relationshipName>
</CustomField>