force-app/main/default/objects/Feedback__c/validationRules/Rating_One_To_Five.validationRule-meta.xml
<ValidationRule>
    <fullName>Rating_One_To_Five</fullName>
    <active>true</active>
    <errorConditionFormula>OR(Rating__c &lt; 1, Rating__c &gt; 5)</errorConditionFormula>
    <errorMessage>Rating must be between 1 and 5.</errorMessage>
</ValidationRule>